--- a/Vidorious/Web.config
+++ b/Vidorious/Web.config
@@ -14,8 +14,15 @@
         <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
       </assemblies>
     </compilation>
-    <httpRuntime targetFramework="4.5" maxRequestLength="1048576"/>
+    <httpRuntime targetFramework="4.5" maxRequestLength="524288000"/>
   </system.web>
+  <system.webServer>
+    <security>
+      <requestFiltering>
+        <requestLimits maxAllowedContentLength="524288000" />
+      </requestFiltering>
+    </security>
+  </system.webServer>
   <connectionStrings>
     <add name="VidoriousEntities" connectionString="metadata=res://*/VidoriousLocalModel.csdl|res://*/VidoriousLocalModel.ssdl|res://*/VidoriousLocalModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=APK-A302-23L;initial catalog=Vidorious;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
